Начал заново. Добавлены карточки, переход по страницам, выбор языка

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,51 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-html {
-  height: 100%;
-  background: rgb(8, 0, 148);
+* {
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  height: 100%;
+.movies-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
 }
-#root {
-  height: 100%;
+
+.select-language {
+  max-width: 80px;
 }
-.animate-spin {
-  animation-duration: 2s;
+.select-language .css-t3ipsp-control,
+.select-language .css-13cymwt-control {
+  height: 36px;
+  min-height: unset;
+}
+.select-language .css-4xgw5l-IndicatorsContainer2 {
+  display: none;
+}
+.select-language .css-1nmdiq5-menu {
+  margin-top: 0;
+}
+.select-language .css-art2ul-ValueContainer2 {
+  padding: 2px 4px;
+}
+.select-language .css-1jj59y3-MenuList2 {
+  max-height: 308px;
+}
+.select-language .css-1jj59y3-MenuList2 > div {
+  padding: 12px 7px;
+}
+.select-language .css-1jj59y3-MenuList2::-webkit-scrollbar {
+  width: 0;
+}
+.select-language__option {
+  display: flex;
+  align-items: center;
+}
+.select-language__option img {
+  border: 1px solid #999;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+  width: 22px;
+  height: 22px;
 }
