--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
   margin: 0;
   padding: 0;
 }
+#root {
+  position: relative;
+}
+body {
+  background-color: #1f1f1f;
+}
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px;
+}
 
 .movies-list {
   display: grid;
@@ -12,27 +24,46 @@
 }
 
 .select-language {
-  max-width: 80px;
+  width: 70px;
+  color: #fff;
 }
 .select-language .css-t3ipsp-control,
 .select-language .css-13cymwt-control {
   height: 36px;
   min-height: unset;
+  cursor: pointer;
+  background-color: #1f1f1f;
 }
+.css-1nmdiq5-menu {
+  border: 1px solid #2684ff;
+}
+.css-1nmdiq5-menu * {
+  cursor: pointer;
+}
+
 .select-language .css-4xgw5l-IndicatorsContainer2 {
   display: none;
 }
+.select-language .css-d7l1ni-option {
+  background-color: #1f1f1f;
+}
 .select-language .css-1nmdiq5-menu {
   margin-top: 0;
+  background-color: #1f1f1f;
 }
 .select-language .css-art2ul-ValueContainer2 {
   padding: 2px 4px;
 }
 .select-language .css-1jj59y3-MenuList2 {
   max-height: 308px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .select-language .css-1jj59y3-MenuList2 > div {
   padding: 12px 7px;
+}
+.css-1jj59y3-MenuList2 > div:not(:last-child) {
+  border-bottom: 1px solid #2684ff;
 }
 .select-language .css-1jj59y3-MenuList2::-webkit-scrollbar {
   width: 0;
@@ -40,6 +71,7 @@
 .select-language__option {
   display: flex;
   align-items: center;
+  color: #fff;
 }
 .select-language__option img {
   border: 1px solid #999;
@@ -48,4 +80,13 @@
   margin-right: 10px;
   width: 22px;
   height: 22px;
+}
+@media (max-width: 849.98px) {
+  .select-language .css-1jj59y3-MenuList2 {
+    max-height: 170px;
+  }
+  .select-language .css-1nmdiq5-menu {
+    bottom: calc(100% - 9px);
+    top: unset;
+  }
 }
