--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,50 +1,23 @@
 .root {
+  overflow: hidden;
+  border: 1px solid #fff;
   width: 100%;
+  aspect-ratio: 10 / 13;
   position: relative;
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  background-color: #e2e8f0;
-  box-shadow: 0 0px 0px 0px #ffffff1a;
-  border: 1px solid transparent;
   border-radius: 15px;
-  text-align: center;
-  padding: 25px 10px;
-  transition: all 0.3s;
-  color: black;
+  color: #444;
   text-decoration: none;
 }
-
-.root:hover {
-  border: 1px solid #000;
-  box-shadow: 8px 8px 0px 0px #ffffff6b;
+.root:hover .image {
+  transform: scale(1.3);
 }
-
-.rating {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 3px;
-  width: 40px;
-  height: 40px;
-  z-index: 1;
-  top: 8px;
-  right: 8px;
-  border: 2px solid #fff;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  color: black;
-  font-weight: bold;
-  font-size: 18px;
-}
-.imageBox {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  margin-bottom: 15px;
-  aspect-ratio: 16/9;
-  border-radius: 30px;
+.root:hover .descriptionContainer {
+  height: 33%;
+  transition: all 0.4s;
+  padding: 0 10px 5px 10px;
 }
 .image {
   position: absolute;
@@ -53,33 +26,29 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: all 0.3s;
-}
-.root:hover .image {
-  transform: scale(1.09);
+  transition: all 0.5s;
+  z-index: -1;
 }
 .title {
+  padding: 10px;
+  background-color: #fff;
+  margin-top: auto;
   font-weight: bold;
   font-size: 26px;
   line-height: 1;
-  margin-bottom: 15px;
-}
-.title span {
-  font-size: 22px;
 }
 .description {
-  -webkit-line-clamp: 6;
+  overflow: hidden;
+  height: 100%;
+  font-size: 19px;
+  -webkit-line-clamp: 5;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+}
+.descriptionContainer {
+  transition: all 0.4s;
+  background-color: #fff;
+  padding: 0 10px;
+  height: 0;
   overflow: hidden;
-  margin-bottom: 15px;
-}
-.green {
-  background: #16a34a;
-}
-.yellow {
-  background: #eab308;
-}
-.red {
-  background: #dc2626;
 }
