--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -15,7 +15,7 @@
   transform: scale(1.3);
 }
 .root:hover .descriptionContainer {
-  height: 33%;
+  height: 116px;
   transition: all 0.4s;
   padding: 0 10px 5px 10px;
 }
@@ -36,6 +36,7 @@
   font-weight: bold;
   font-size: 26px;
   line-height: 1;
+  margin-bottom: -1px;
 }
 .description {
   overflow: hidden;
