--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html,
+body,
+#root {
+  height: 100%;
+  min-height: 100%;
+}
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
@@ -6,7 +12,7 @@
 }
 #root {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
   background-color: #1f1f1f;
@@ -18,7 +24,7 @@ body {
   padding: 0 10px;
 }
 .main {
-  padding: 20px 0;
+  padding: 20px 10px;
 }
 
 .movies-list {
