--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   border: 1px solid #fff;
   width: 100%;
-  aspect-ratio: 10 / 13;
+  aspect-ratio: 10 / 14;
   position: relative;
   cursor: pointer;
   display: flex;
@@ -15,9 +15,8 @@
   transform: scale(1.3);
 }
 .root:hover .descriptionContainer {
-  height: 116px;
   transition: all 0.4s;
-  padding: 0 10px 5px 10px;
+  bottom: 0;
 }
 .image {
   position: absolute;
@@ -25,31 +24,30 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   transition: all 0.5s;
   z-index: -1;
 }
 .title {
-  padding: 10px;
-  background-color: #fff;
   margin-top: auto;
   font-weight: bold;
   font-size: 26px;
   line-height: 1;
-  margin-bottom: -1px;
+  margin-bottom: 5px;
 }
 .description {
   overflow: hidden;
-  height: 100%;
   font-size: 19px;
-  -webkit-line-clamp: 5;
+  line-height: 1.09;
+  -webkit-line-clamp: 10;
   display: -webkit-box;
   -webkit-box-orient: vertical;
 }
 .descriptionContainer {
+  position: relative;
+  bottom: -100%;
+  height: 100%;
   transition: all 0.4s;
   background-color: #fff;
-  padding: 0 10px;
-  height: 0;
-  overflow: hidden;
+  padding: 10px;
 }
