--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
-html,
-body,
-#root {
-  height: 100%;
-  min-height: 100%;
-}
+/** Global start **/
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+html,
+body,
 #root {
-  position: relative;
-  overflow-x: hidden;
+  /* height: 100%; */
+  min-height: 100%;
+}
+#root {
+  margin-top: 130px;
+  /* height: calc(100vh - 130px); */
+  /* position: relative; */
+  /* overflow-x: hidden; */
 }
 body {
   background-color: #1f1f1f;
@@ -24,77 +27,49 @@ body {
   padding: 0 10px;
 }
 .main {
+  flex: 1;
   padding: 20px 10px;
 }
+.wrapper {
+  min-height: calc(100vh - 130px);
+  display: flex;
+  flex-direction: column;
+}
+/** Global end **/
+
+/** Scrollbar start **/
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+/** Scrollbar end **/
 
 .movies-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 20px;
 }
-.select-language {
-  width: 70px;
+h1 {
   color: #fff;
 }
-.select-language .css-t3ipsp-control,
-.select-language .css-13cymwt-control {
-  height: 36px;
-  min-height: unset;
-  cursor: pointer;
-  background-color: #1f1f1f;
-}
-.css-1nmdiq5-menu {
-  border: 1px solid #2684ff;
-}
-.css-1nmdiq5-menu * {
-  cursor: pointer;
-}
-.select-language .css-4xgw5l-IndicatorsContainer2 {
-  display: none;
-}
-.select-language .css-d7l1ni-option {
-  background-color: #1f1f1f;
-}
-.select-language .css-1nmdiq5-menu {
-  margin-top: 0;
-  background-color: #1f1f1f;
-}
-.select-language .css-art2ul-ValueContainer2 {
-  padding: 2px 4px;
-}
-.select-language .css-1jj59y3-MenuList2 {
-  max-height: 308px;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-.select-language .css-1jj59y3-MenuList2 > div {
-  padding: 12px 7px;
-}
-.css-1jj59y3-MenuList2 > div:not(:last-child) {
-  border-bottom: 1px solid #2684ff;
-}
-.select-language .css-1jj59y3-MenuList2::-webkit-scrollbar {
-  width: 0;
-}
-.select-language__option {
-  display: flex;
-  align-items: center;
-  color: #fff;
-}
-.select-language__option img {
-  border: 1px solid #999;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 10px;
-  width: 22px;
-  height: 22px;
-}
+/** Media query start **/
 @media (max-width: 849.98px) {
-  .select-language .css-1jj59y3-MenuList2 {
-    max-height: 170px;
+}
+@media (max-width: 549.98px) {
+  #root {
+    margin-top: 90px;
   }
-  .select-language .css-1nmdiq5-menu {
-    bottom: calc(100% - 9px);
-    top: unset;
+  .movies-list {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
+/** Media query end **/
