--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: #fff;
 }
 html,
 body,
@@ -61,8 +62,108 @@ body {
 h1 {
   color: #fff;
 }
+
+/** Movie page start **/
+.movie__details_box {
+  display: flex;
+  gap: 20px;
+}
+.movie__poster_box {
+  flex: 0 1 40%;
+}
+.movie__poster {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.movie__details {
+  flex: 0 1 60%;
+}
+.movie__title {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.movie__released span,
+.movie__runtime span,
+.movie__rating span {
+  margin-right: 3px;
+}
+.movie__genres span {
+  margin-right: 8px;
+}
+.movie__released,
+.movie__runtime,
+.movie__rating {
+  font-size: 18px;
+  margin-bottom: 9px;
+}
+.movie__genres {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.movie__genres a {
+  text-decoration: none;
+}
+.movie__genres a span {
+  margin-right: 0;
+  text-decoration: underline;
+}
+.movie__genres a:not(:last-child) {
+  margin-right: 10px;
+}
+.movie__genres a:not(:last-child):after {
+  content: ", ";
+}
+.movie__overview {
+  margin-bottom: 20px;
+}
+.movie__production_companies span {
+  font-weight: 700;
+  display: block;
+  margin-bottom: 6px;
+}
+.movie__production_companies p {
+  display: inline-block;
+}
+.movie__production_companies p:not(:last-child) {
+  margin-right: 10px;
+}
+.movie__production_companies p:not(:last-child)::after {
+  content: ", ";
+}
+.movie__videos {
+  margin-top: 100px;
+}
+.movie__videos_title {
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.movie__videos_box {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
+}
+.movie__video {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  aspect-ratio: 16/9;
+  width: 100% !important;
+  max-width: 100% !important;
+  height: auto !important;
+  object-fit: cover;
+}
+/** Movie page end **/
 /** Media query start **/
 @media (max-width: 849.98px) {
+}
+@media (max-width: 767.98px) {
+  .movie__details_box {
+    flex-direction: column;
+  }
 }
 @media (max-width: 549.98px) {
   #root {
