--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: #fff;
+}
+html:has([data-open-menu="true"]) {
+  overflow: hidden;
 }
 html,
 body,
@@ -12,14 +14,13 @@ body,
   /* height: 100%; */
   min-height: 100%;
 }
-#root {
-  margin-top: 130px;
-  /* height: calc(100vh - 130px); */
-  /* position: relative; */
-  /* overflow-x: hidden; */
-}
-body {
+.dark {
   background-color: #1f1f1f;
+  color: #fff;
+}
+.light {
+  background-color: #ededed;
+  color: #1f1f1f;
 }
 .container {
   max-width: 1200px;
@@ -28,11 +29,12 @@ body {
   padding: 0 10px;
 }
 .main {
+  margin-top: 130px;
   flex: 1;
   padding: 20px 10px;
 }
 .wrapper {
-  min-height: calc(100vh - 130px);
+  min-height: calc(100vh);
   display: flex;
   flex-direction: column;
 }
@@ -59,8 +61,50 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 20px;
 }
-h1 {
+.dark h1 {
   color: #fff;
+}
+.light h1 {
+  color: #000;
+}
+.load-more__btn {
+  display: block;
+  margin: 50px auto 20px;
+  cursor: pointer;
+  position: relative;
+  padding: 10px 24px;
+  font-size: 26px;
+  color: #62c062;
+  border: 3px solid #62c062;
+  border-radius: 34px;
+  background-color: transparent;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  overflow: hidden;
+}
+.load-more__btn::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color: #62c062;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.load-more__btn:hover::before {
+  scale: 4;
+}
+.load-more__btn:hover {
+  color: #212121;
+  scale: 1.1;
+  box-shadow: 0 0px 20px #62c06266;
+}
+.load-more__btn:active {
+  scale: 1;
 }
 
 /** Movie page start **/
@@ -80,13 +124,380 @@ h1 {
 .movie__video {
   border: 1px solid #fff;
   border-radius: 5px;
-  aspect-ratio: 16/9;
+  aspect-ratio: 16/9.1;
   width: 100% !important;
   max-width: 100% !important;
   height: auto !important;
   object-fit: cover;
 }
+.light .movie__video {
+  border-color: #1f1f1f;
+}
 /** Movie page end **/
+/** Header start **/
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 112px;
+  padding: 10px 0;
+  z-index: 2;
+}
+.dark .header {
+  border-bottom: 1px solid #fff;
+  background-color: #1f1f1f;
+}
+.light .header {
+  border-bottom: 1px solid #1f1f1f;
+  background-color: #dadada;
+}
+.header__container {
+  column-gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo {
+  max-width: 165px;
+}
+.header__logo img {
+  height: auto;
+  max-width: 100%;
+}
+.light .header__logo img {
+  filter: drop-shadow(0 7px 9px #000000);
+}
+.header__switchers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  cursor: pointer;
+}
+.theme__toggle_wrap {
+  cursor: pointer;
+}
+.header__theme {
+  overflow: hidden;
+}
+.header__menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__menu a {
+  font-weight: 600;
+  font-size: 18px;
+  text-decoration: none;
+}
+.dark .header__menu a {
+  color: #fff;
+}
+.light .header__menu a {
+  color: #1f1f1f;
+}
+.dark .header__menu a:hover {
+  color: #949ea6;
+}
+.light .header__menu a:hover {
+  color: #7a7a7a;
+}
+.header__menu a:not(:last-child) {
+  margin-right: 20px;
+}
+.header__mobile_btn {
+  display: none;
+}
+.header__box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__register_btn {
+  background-color: #0c9d00;
+  color: #fff;
+  padding: 10px 20px 12px;
+  border-radius: 5px;
+  font-size: 18px;
+  line-height: 1;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.header__register_btn:hover {
+  background-color: #0d9d00a5;
+}
+a[aria-current="page"] {
+  color: #949ea6;
+  text-decoration: underline;
+}
+@media (max-width: 849.98px) {
+  .header__mobile_btn {
+    height: 28px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  .header__container {
+    justify-content: space-between;
+  }
+  .header__mobile_btn span {
+    position: relative;
+    display: block;
+    width: 28px;
+    height: 2px;
+  }
+  .header__mobile_btn span::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    width: 28px;
+    height: 2px;
+  }
+  .header__mobile_btn span::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    width: 28px;
+    height: 2px;
+  }
+  .dark .header__mobile_btn span,
+  .dark .header__mobile_btn span::after,
+  .dark .header__mobile_btn span::before {
+    background-color: #fff;
+  }
+  .light .header__mobile_btn span,
+  .light .header__mobile_btn span::after,
+  .light .header__mobile_btn span::before {
+    background-color: #000;
+  }
+  .header__menu {
+    flex-direction: column;
+  }
+  .header__switchers {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  .header__menu a:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+  .header__box {
+    position: absolute;
+    flex-direction: column;
+    max-width: 375px;
+    width: 100%;
+    height: calc(100vh - 112px);
+    padding: 20px;
+    top: 112px;
+    right: -100%;
+    z-index: -1;
+    transition: right 0.4s;
+  }
+  .dark .header__box {
+    background-color: #1f1f1f;
+  }
+  .light .header__box {
+    background-color: #dadada;
+  }
+  [data-open-menu="true"] .header__box {
+    transition: right 0.4s;
+    right: 0;
+  }
+  .dark [data-open-menu="true"] .header__box {
+    border-left: 2px solid #fff;
+  }
+  .light [data-open-menu="true"] .header__box {
+    border-left: 2px solid #1f1f1f;
+  }
+}
+@media (max-width: 549.98px) {
+  .header {
+    height: 80px;
+  }
+  .header__logo {
+    max-width: 120px;
+  }
+  .header__box {
+    top: 80px;
+    height: calc(100vh - 80px);
+  }
+}
+@media (max-width: 374.98px) {
+  .header__box {
+    border-left: 0px solid #000 !important;
+  }
+}
+/** Header end **/
+/** Footer start **/
+.dark .footer {
+  border-top: 1px solid #fff;
+  background-color: #1f1f1f;
+  color: #fff;
+  padding: 20px 0;
+}
+.light .footer {
+  border-top: 1px solid #1f1f1f;
+  background-color: #dadada;
+  color: #000;
+  padding: 20px 0;
+}
+/** Footer end **/
+/** ovie card start **/
+.movie__card {
+  overflow: hidden;
+  border: 1px solid #fff;
+  width: 100%;
+  aspect-ratio: 10 / 14;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+  color: #444;
+  text-decoration: none;
+}
+.light .movie__card {
+  border-color: #1f1f1f;
+}
+.movie__card * {
+  color: #444;
+}
+.dark .movie__card * {
+  color: #fff;
+}
+.movie__card:hover .movie__card-image {
+  transform: scale(1.3);
+}
+.movie__card:hover .movie__card-descriptionContainer {
+  transition: all 0.4s;
+  bottom: 0;
+}
+.movie__card-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  transition: all 0.5s;
+  z-index: -1;
+}
+.movie__card-title {
+  margin-top: auto;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1;
+  margin-bottom: 5px;
+}
+.movie__card-description {
+  overflow: hidden;
+  font-size: 19px;
+  line-height: 1.09;
+  -webkit-line-clamp: 10;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+.movie__card-descriptionContainer {
+  position: relative;
+  bottom: -100%;
+  height: 100%;
+  transition: all 0.4s;
+  background-color: #fff;
+  padding: 18px 14px 12px 14px;
+}
+.dark .movie__card-descriptionContainer {
+  background-color: #1f1f1f;
+}
+/** Movie card end **/
+/** Movie details start **/
+.movie__details_box {
+  display: flex;
+  gap: 20px;
+}
+.movie__poster_box {
+  flex: 0 1 40%;
+}
+.movie__poster {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.light .movie__poster {
+  border-color: #1f1f1f;
+}
+.movie__details {
+  flex: 0 1 60%;
+}
+.movie__title {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.movie__released span,
+.movie__runtime span,
+.movie__rating span {
+  margin-right: 3px;
+}
+.movie__genres span {
+  margin-right: 8px;
+}
+.movie__released,
+.movie__runtime,
+.movie__rating {
+  font-size: 18px;
+  margin-bottom: 9px;
+}
+.movie__genres {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.movie__genres a {
+  text-decoration: none;
+}
+.dark .movie__genres a {
+  color: #fff;
+}
+.light .movie__genres a {
+  color: #1f1f1f;
+}
+.movie__genres a span {
+  margin-right: 0;
+  text-decoration: underline;
+}
+.movie__genres a:not(:last-child) {
+  margin-right: 10px;
+}
+.movie__genres a:not(:last-child):after {
+  content: ", ";
+}
+.movie__overview {
+  margin-bottom: 20px;
+}
+.movie__production_companies span {
+  font-weight: 700;
+  display: block;
+  margin-bottom: 6px;
+}
+.movie__production_companies p {
+  display: inline-block;
+}
+.movie__production_companies p:not(:last-child) {
+  margin-right: 10px;
+}
+.movie__production_companies p:not(:last-child)::after {
+  content: ", ";
+}
+@media (max-width: 689.98px) {
+  .movie__details_box {
+    flex-direction: column;
+  }
+}
+/** Movie details end **/
+
 /** Media query start **/
 @media (max-width: 849.98px) {
 }
@@ -96,11 +507,16 @@ h1 {
   }
 }
 @media (max-width: 549.98px) {
-  #root {
+  .main {
     margin-top: 90px;
   }
   .movies-list {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
+@media (max-width: 339.98px) {
+  .movie__video {
+    max-width: 300px !important;
   }
 }
 /** Media query end **/
